cmake_minimum_required(VERSION 3.0)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
project( BT_TUAN1 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( BT4 BT4.cpp)
add_executable( BT1 BT1.cpp)
target_link_libraries( BT4 ${OpenCV_LIBS} )
target_link_libraries( BT1 ${OpenCV_LIBS} )

